feat: update services card layout, adjust Realization card color and image and delete service menuitem on mobile

--- a/src/components/Realization.astro
+++ b/src/components/Realization.astro
@@ -24,7 +24,7 @@ const { data } = Astro.props as { data: RealizationData };
         />
         <div
             data-aos="fade-up"
-            class="bg-neutral-200 mt-5 md:m-5 md:mt-15 rounded-lg"
+            class="bg-dark/10 mt-5 md:m-5 md:mt-15 rounded-lg"
         >
             <div
                 class="pt-5 px-5 md:pt-10 md:pb-10 lg:pt-15 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 items-center justify-center auto-rows-fr divide-y divide-white md:divide-y-0 lg:divide-x lg:divide-y-0 lg:divide-white"
