--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -15,10 +15,7 @@ import { SERVICES } from "../content/services";
                     href={`${import.meta.env.BASE_URL}${service.href}`}
                     class="block"
                 >
-                    <div
-                        class="group relative overflow-hidden text-primary flex flex-col gap-7 bg-white py-15 px-10 transition-all duration-300 hover:text-secondary group-active:text-seconda  hover:scale-[1.03]
-            active:scale-[0.98] h-full shadow-lg rounded-lg"
-                    >
+                    <div class="group relative overflow-hidden text-primary flex flex-col gap-7 bg-white p-5 md:px-10 md:py-10 lg:py-15 transition-all duration-300 hover:text-secondary group-active:text-seconda  hover:scale-[1.03] active:scale-[0.98] h-full shadow-lg rounded-lg">
                         <div
                             class="absolute inset-0 bg-cover bg-center opacity-0 transition-opacity duration-300 group-hover:opacity-100 group-active:opacity-100"
                             style={`background-image: url('${service.bgImage.src}');`}
