--- a/src/components/CTASection.astro
+++ b/src/components/CTASection.astro
@@ -8,7 +8,7 @@ import Button from "./Button.astro";
 <section id={CTA.id} class="bg-secondary md:bg-radial-light scroll-mt-15 md:scroll-mt-22.5">
     <div
         data-aos="fade-up"
-        class="max-w-360 flex flex-col items-center justify-center m-auto py-5 md:py-30 px-5 lg:px-1"
+        class="max-w-360 flex flex-col items-center justify-center m-auto py-5 md:py-30 px-5" 
     >
         <ContentSubHeader
             text={CTA.header}
