--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ import { SERVICES } from "../content/services";
 
 <div
     data-aos="fade-up"
-    class="pt-5 md:pt-15 grid grid-cols-1 gap-7 lg:grid-cols-3 lg:gap-10 lg:px-15 justify-center"
+    class="pt-5 md:pt-15 grid grid-cols-1 gap-7 lg:grid-cols-3 lg:gap-10 justify-center"
 >
     {
         SERVICES.items.map((service) => {
