--- a/src/components/DescriptionSection.astro
+++ b/src/components/DescriptionSection.astro
@@ -13,7 +13,7 @@ const { data } = Astro.props as { data: DescriptionData };
 >
     <div
         data-aos="fade-up"
-        class="max-w-360 flex flex-col items-center justify-center m-auto py-10 md:py-30 px-5 lg:px-1"
+        class="max-w-360 flex flex-col items-center justify-center m-auto py-10 md:py-30 px-5"
     >
         <ContentHeader text={data.header} class="text-primary" />
         <ContentSubHeader text={data.subHeader} class="gradient-dark" />
