--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -11,11 +11,11 @@ import ContentDescription from "./ContentDescription.astro";
 <section id={ABOUT.id} class="bg-radial-dark scroll-mt-15 md:scroll-mt-22.5">
     <div
         data-aos="fade-up"
-        class="max-w-360 items-center justify-center m-auto py-10 md:py-30 px-5 lg:px-1"
+        class="max-w-360 items-center justify-center m-auto py-10 md:py-30 px-5"
     >
         <ContentHeader text={ABOUT.header} class="text-secondary" />
         <div
-            class="grid grid-cols-1 gap-4 lg:grid-cols-2 lg:gap-18 lg:px-15 items-center justify-center m-auto md:py-10"
+            class="grid grid-cols-1 gap-4 lg:grid-cols-2 lg:gap-18 items-center justify-center m-auto md:py-10"
         >
             <div>
                 <ContentSubHeader
