--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -14,7 +14,7 @@ const { data } = Astro.props as { data: PortfolioData };
 >
     <div
         data-aos="fade-up"
-        class="max-w-360 flex flex-col items-center justify-center m-auto pt-10 md:pt-30 pb-5 md:pb-15 px-5 lg:px-1"
+        class="max-w-360 flex flex-col items-center justify-center m-auto pt-10 md:pt-30 pb-5 md:pb-15 px-5"
     >
         <ContentHeader text={data.header} class="text-secondary" />
         <ContentSubHeader text={data.subHeader} class="gradient-light" />
