--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -12,7 +12,7 @@ import { SERVICES } from "../content/services";
 >
     <div
         data-aos="fade-up"
-        class="max-w-360 flex flex-col items-center justify-center m-auto py-10 md:py-30 px-5 lg:px-1"
+        class="max-w-360 flex flex-col items-center justify-center m-auto py-10 md:py-30 px-5"
     >
         <ContentHeader text={SERVICES.header} class="text-primary" />
         <ContentSubHeader text={SERVICES.subHeader} class="gradient-dark" />
