--- a/src/components/Realization.astro
+++ b/src/components/Realization.astro
@@ -32,7 +32,7 @@ const { data } = Astro.props as { data: RealizationData };
                         const isFirstTwo = i < 2;
 
                         return (
-                            <div class="lg:px-5 pb-0 transition-all duration-300 text-primary h-full flex flex-col border-white md:max-lg:border-b md:max-lg:nth-last-[-n+2]:border-b-0 md:max-lg:odd:border-r md:max-lg:even:border-r-0">
+                            <div class="pb-0 transition-all duration-300 h-full flex flex-col border-white md:max-lg:border-b md:max-lg:nth-last-[-n+2]:border-b-0 md:max-lg:odd:border-r md:max-lg:even:border-r-0">
                                 <div
                                     class:list={[
                                         "flex flex-col items-start gap-5 flex-1 py-5 md:p-5",
@@ -41,15 +41,15 @@ const { data } = Astro.props as { data: RealizationData };
                                         "lg:py-5",
                                     ]}
                                 >
-                                    <div class="text-5xl text-primary-lighter font-extralight">
+                                    <div class="text-5xl text-primary-lighter/70 font-extralight">
                                         {item.number}
                                     </div>
 
-                                    <h4 class="text-lg text-left font-semibold">
+                                    <h4 class="text-2xl text-primary text-left font-semibold">
                                         {item.title}
                                     </h4>
 
-                                    <div class="text-sm text-primary text-left">
+                                    <div class="text-base text-primary-lighter text-left">
                                         <p>{item.description}</p>
                                     </div>
                                 </div>
@@ -60,7 +60,7 @@ const { data } = Astro.props as { data: RealizationData };
             </div>
         </div>
         <div
-            class="md:bg-dark/10 w-full aspect-video md:aspect-2/1 lg:aspect-3/1 overflow-hidden md:pb-10 lg:pb-15 md:px-10 pt-5 md:pt-0"
+            class="md:bg-dark/10 w-full md:aspect-2/1 lg:aspect-3/1 overflow-hidden md:pb-10 lg:pb-15 md:px-10 pt-5 md:pt-0"
         >
             <Picture
                 src={data.image}
